[#175] Fixed font size weirdness on mobiles

--- a/code/wp-content/themes/Akvo-responsive/css/main.scss
+++ b/code/wp-content/themes/Akvo-responsive/css/main.scss
@@ -359,7 +359,7 @@ p {
 }
 @media screen and (max-width:768px) {
     p {
-        font-size: 1.2em;
+        font-size: 1em;
     }
 }
 .indentNbr {
